--- a/portfolio.html
+++ b/portfolio.html
@@ -40,30 +40,29 @@
       </ul>
     </header>
     <main>
-      <section class="filters">
-        <h2>Фильтр</h2>
-        <!--сховати-->
+      <section class="portfolio">
+        <h1>Роботи</h1><!--сховати-->
+      
+        <h2 class="filters">Фильтр</h2>
         <ul class="button">
-          <li class>
+          <li class="list">
             <button type="button">Все</button>
           </li>
-          <li>
+          <li class="list">
             <button type="button">Веб-сайты</button>
           </li>
-          <li>
+          <li class="list">
             <button type="button">Приложения</button>
           </li>
-          <li>
+          <li class="list">
             <button type="button">Дизайн</button>
           </li>
-          <li>
+          <li class="list">
             <button type="button">Маркетинг</button>
           </li>
         </ul>
       </section>
-      <section class="portfolio">
-        <h1>Роботи</h1>
-        <!--сховати-->
+
         <ul class="portfolio list">
           <li>
             <a href="#">
@@ -94,6 +93,7 @@
               <p>Приложение</p>
             </a>
           </li>
+
           <li>
             <a href="#">
               <img src="./images/portfolio_project_4.jpg" alt="Проект Prime" />
@@ -101,6 +101,7 @@
               <p>Маркетинг</p>
             </a>
           </li>
+
           <li>
             <a href="#">
               <img src="./images/portfolio_project_5.jpg" alt="Проект Boxes" />
@@ -108,6 +109,7 @@
               <p>Приложение</p>
             </a>
           </li>
+
           <li>
             <a href="#">
               <img
@@ -118,6 +120,7 @@
               <p>Веб-сайт</p>
             </a>
           </li>
+
           <li>
             <a href="#">
               <img
@@ -128,6 +131,7 @@
               <p></p
             ></a>
           </li>
+
           <li>
             <a href="#">
               <img src="./images/portfolio_project_8.jpg" alt="Проект LAB" />
@@ -135,6 +139,7 @@
               <p>Маркетинг</p>
             </a>
           </li>
+
           <li>
             <a href="#">
               <img
