--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </section>
 
       <section class="features">
-        <h2>Особенности</h2>
+        <h2 class="section-title">Особенности</h2>
         <ul class="list">
           <li>
             <h3 class="features-title">Внимание к деталям</h3>
