--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -19,32 +23,35 @@
           <span class="logo-web">Web</span>Studio</a
         >
         <ul class="nav list">
-          <li>
+          <li class="item">
             <a href="./index.html" class="list">Студия</a>
           </li>
-          <li>
+          <li class="item">
             <a href="./portfolio.html" class="list current">Портфолио</a>
           </li>
-          <li>
+          <li class="item">
             <a href="#" class="list">Контакты</a>
           </li>
         </ul>
       </nav>
       <ul class="auth">
-        <li class="auth-list">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <li class="auth-nav">
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
         </li>
-        <li class="auth-list">
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="auth-nav">
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
-    <main>
-      <section class="portfolio">
-        <h1>Роботи</h1><!--сховати-->
-      
-        <h2 class="filters">Фильтр</h2>
-        <ul class="button">
+    <main class="main-container">
+      <section class="project">
+        <!--<h1>Роботи</h1>
+        
+        <h2>Фильтр</h2>-->
+
+        <ul class="portfolio-button">
           <li class="list">
             <button type="button">Все</button>
           </li>
@@ -61,93 +68,107 @@
             <button type="button">Маркетинг</button>
           </li>
         </ul>
-      </section>
 
         <ul class="portfolio list">
-          <li>
+          <li class="portfolio-item">
             <a href="#">
               <img src="./images/portfolio_project_1.jpg" alt="Технокряк" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
-              >
+              <div class="item-text">
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p>
+              </div>
             </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a href="#">
-              >
               <img src="./images/portfolio_project_2.jpg" alt="Постер" />
-              <h2>Постер<span lang="en"> New Orlean vs Golden Star</span></h2>
-              <p>Дизайн</p>
-              >
+              <div class="item-text">
+                <h2>Постер<span lang="en"> New Orlean vs Golden Star</span></h2>
+                <p>Дизайн</p>
+              </div>
             </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a href="#">
               <img
                 src="./images/portfolio_project_3.jpg"
                 alt="Ресторан Seafood"
               />
-              <h3>Ресторан <span lang="en">Seafood</span></h3>
-              <p>Приложение</p>
+              <div class="item-text">
+                <h2>Ресторан <span lang="en">Seafood</span></h2>
+                <p>Приложение</p>
+              </div>
             </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a href="#">
               <img src="./images/portfolio_project_4.jpg" alt="Проект Prime" />
-              <h2>Проект <span lang="en">Prime</span></h2>
-              <p>Маркетинг</p>
+              <div class="item-text">
+                <h2>Проект <span lang="en">Prime</span></h2>
+                <p>Маркетинг</p>
+              </div>
             </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a href="#">
               <img src="./images/portfolio_project_5.jpg" alt="Проект Boxes" />
-              <h2>Проект <span lang="en">Boxes</span></h2>
-              <p>Приложение</p>
+              <div class="item-text">
+                <h2>Проект <span lang="en">Boxes</span></h2>
+                <p>Приложение</p>
+              </div>
             </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a href="#">
               <img
                 src="./images/portfolio_project_6.jpg"
                 alt="Inspiration has no Borders"
               />
-              <h2 lang="en">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <div class="item-text">
+                <h2 lang="en">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </div>
             </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a href="#">
               <img
                 src="./images/portfolio_project_7.jpg"
-                alt="Издание Limited Edition" />
-              <h2>Издание<span lang="en">Limited Edition</span></h2>
-              <p>Дизайн</p>
-              <p></p
-            ></a>
-          </li>
-
-          <li>
-            <a href="#">
-              <img src="./images/portfolio_project_8.jpg" alt="Проект LAB" />
-              <h2>Проект<span lang="en">LAB</span></h2>
-              <p>Маркетинг</p>
+                alt="Издание Limited Edition"
+              />
+              <div class="item-text">
+                <h2>Издание<span lang="en">Limited Edition</span></h2>
+                <p>Дизайн</p>
+              </div>
             </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
+            <a href="#">
+              <img src="./images/portfolio_project_8.jpg" alt="Проект LAB" />
+              <div class="item-text">
+                <h2>Проект<span lang="en">LAB</span></h2>
+                <p>Маркетинг</p>
+              </div>
+            </a>
+          </li>
+
+          <li class="portfolio-item">
             <a href="#">
               <img
                 src="./images/portfolio_project_9.jpg"
                 alt="Growing Business"
               />
-              <h2 lang="en">Growing Business</h2>
-              <p>Приложение</p>
+              <div class="item-text">
+                <h2 lang="en">Growing Business</h2>
+                <p>Приложение</p>
+              </div>
             </a>
           </li>
         </ul>
